New shortcut plus key binding

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,12 @@
         {
             "label": "Simulation(Verilator)",
             "type": "shell",
-            "command": "sbt \" Test / run --verbose 1\""
+            "command": "sbt \" Test / run --verbose 1\"",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
